\name{RSA}
\title{News for package 'RSA'}
\encoding{UTF-8}


\section{Version 0.10.5}{
\subsection{New features}{
	\itemize{
		\item Draw stilts for selected data points in plot (see new argument in the points list, see \code{?plotRSA})
}
}
}


\section{Version 0.10.4}{
\subsection{New features}{
	\itemize{
		\item New demo data set (self-generated fake data): \code{selfother} (can be used to try inclusion of control variables and to try cubic RSA)
}
}
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item Fixed error in estimation of SRSQD model (by replacing a model constraint by an equivalent formula).
	}
}
}


\section{Version 0.10.3}{
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item Documented the discrepancy output of the summary() function in the help file.
	}
}
}

\section{Version 0.10.2}{
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item Moved tkrplot package to "Suggests" to make RSA compatible with Apple Silicon.
	}
}
}


\section{Version 0.10.1}{
\subsection{Bug fixes/Glitches}{
	\itemize{
		\item Fixed error in aictab function (had to react to a change in R 4.0.0 concerning stringsAsFactors)
		\item Fixed error in discrepancy output of the summary() function
	}
}
}


\section{Version 0.10.0}{


\subsection{New features}{
	\itemize{
		\item Started to implement unit testing with covr.
		\item New option \code{claxes.alpha} in \code{plot()}. When plotting one of the cubic models \code{"CL"} or \code{"RRCL"} with the axes \code{K1} and \code{K2}, this new option can be used to change the alpha level for which the regions of significance (i.e., the positions of the lines K1 and K2 that demarcate these regions) are computed.
		\item New option \code{alphacorrection} in \code{caRange()}. Enables Bonferroni-correction when testing the outcome predictions of all data points behind the line \code{E2} for the cubic models \code{"CA"} and \code{"RRCA"}.
		