@@ -52,5 +52,6 @@ importFrom(stats,quantile)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(utils,compareVersion)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
