@@ -1,6 +1,6 @@
 #' @importFrom grDevices colorRamp colorRampPalette contourLines dev.new dev.off jpeg rgb
 #' @importFrom graphics lines plot points text
 #' @importFrom stats formula influence.measures lm na.exclude na.omit pf pt quantile rnorm var sd
-#' @importFrom utils packageDescription packageVersion
+#' @importFrom utils packageDescription packageVersion compareVersion
 #' @importFrom methods slot
 NULL
